<resources>
    <string name="app_name">Reptiles Data</string>
    <string name="reptil">Reptil</string>
    <string name="reptil_adl">Reptil berasal dari kata reptum yang berarti melata. Reptil merupakan hewan melata yang tubuhnya dilapisi kulit kering atau sisik dan bernafas menggunakan paru-paru. Sebagian besar kelas ini merupakan hewan tetrapoda kecuali bangsa ular-ularan. Kelas ini memiliki ciri khas yaitu tubuh anggota kelas reptil di tutupi oleh sisik atau memiliki sisik dan memiliki jari kaki bercakar kecuali ular. Menurut Mattison seperti yang dikutip oleh Mistar (2008), terdapat lebih dari 8.000 jenis di dunia, terbagi atas 4 ordo yaitu: ordo Testudinates, ordo Rhynchocephalia, ordo Squamata , ordo Crocodylia.</string>
    <string name="email">zekidream17@gmail.com</string>
    <string name="ig">nrzkyyh</string>
    <string name="ordo1">1. Ordo Testudinates/Chelonia</string>
    <string name="ordo1_adl">Testudinates merupakan ordo reptil yang memiliki cangkang sebagai tempat berlindung maupun menjadi bagian tubuhnya. Cangkang tersebut terbagi menjadi 2 yaitu karapaks pada bagian atas dan plastron sebagai perisai dada. Cangkang ini menjadi tameng yang melindungi hewan ini dari pemangsa dan juga dari sengatan matahari. Yang termasuk ke dalam ordo ini adalah segala jenis kura-kura dan penyu. </string>
    <string name="ordo2">2. Ordo Rhynchocephalia</string>
    <string name="ordo2_adl">Rhynchocephalia merupakan ordo reptil yang anggotanya merupakan kadal-kadal purba. Salah satu contohnya adalah tuatara. Hewan ini hanya tersisa dua jenis di dunia dan merupakan spesies endemik di Selandia Baru. Selain itu, kadal ini merupakan bukti peninggalan zaman dinosaurus yang hidup pada 200 juta tahun yang lalu. Tuatara nampak mirip dengan kadal biasa, namun terdapat perbedaan yang menyebabkan tuatara tidak digolongkan pada ordo Squamata seperti kadal.</string>
    <string name="ordo3">3.	Ordo Squamata</string>
    <string name="ordo3_adl">Squamata merupakan ordo reptil yang mengalami pergantian kulit atau sisik secara periodik. Tubuhnya ditutupi oleh sisik yang terbuat dari bahan tanduk. Squamata sendiri diklasifikasikan menjadi tiga sub-ordo, yaitu Sauria(contohnya kadal, iguana, dsb), Ophidia(bangsa ular-ularan), dan Amphisbaenia (Squamata tak bertungkai, sisik tersusun seperti cincin-cincin. Ordo Squamata seperti ular masih bisa sering ditemukan di pemukiman warga. Ular memiliki pendengaran dan penglihatan yang lemah namun kelemahan tersebut dapat ditutupi oleh kelebihan ular yang dapat menemukan mangsa dengan menangkap getaran yang merambat di tanah. Sebagian ular mempunyai lubang-lubang di wajah untuk mendeteksi panas dari mangsanya. Kulit ular tidak tumbuh bersama tubuhnya sehingga ular harus mengganti kulitnya pada saat pertumbuhan.</string>
    <string name="ordo4">4.	Ordo Crocodila</string>
    <string name="ordo4_adl">Crocodila merupakan ordo yang mencakup reptil yang berukuran paling besar diantara yang lain. Kulitnya ditutupi oleh sisik sisik dari bahan tanduk yang termodifikasi bentuknya menjadi seperti perisai. Buaya memiliki jantung yang terbagi menjadi 4 ruang. Pola perilakunya yang paling mencolok adalah ordo ini sangat suka berjemur di siang hari untuk menaikkan suhu tubuhnya. Crocodilian termasuk hewan nokturnal, tapi tidak menutup kemungkinan bangsa ini berburu di siang hari. Di habitatnya, buaya dewasa memiliki daerah kekuasaan untuk dirinya sendiri maupun untuk kelompoknya. Ordo ini dibagi menjadi tiga famili, antara lain famili alligatoridae, famili crocodylidae, famili gavialidae. Aligator termasuk keluarga buaya. Buaya dan aligator memiliki perbedaan dari moncongnya.</string>

</resources>
